--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require-dev": {
         "phpunit/phpunit": "^7.2"
     },
-    "license": "GNU GPL",
+    "license": "GPL-3.0-or-later",
     "keywords": [
         "php",
         "error",
